# tic-tac-miso

./: Makefile  README.md  app.cabal  cabal.project
.github/workflows/: main.yml
app/: Main.hs
assets/: style.css
static/: index.html
